--- a/src/UniNotifier_ru_ru.resx
+++ b/src/UniNotifier_ru_ru.resx
@@ -129,9 +129,9 @@
   <data name="HelpText" xml:space="preserve">
     <value>Это приложение предоставляет возможность получать уведомления об изменении состояния указанных пользователем веб-сайтов. Другими словами, об их обновлениях, которые будут представлены в виде текстового журнала. Загружается только то, что указал пользователь – все остальные объекты (включая рекламу) игнорируются.
 
-- Раздел настроек позволяет управлять уведомлениями и конструировать их.
-- Главный журнал обеспечивает просмотр новостей, переход на веб-страницы, с которых они были получены, и возможность ими поделиться.
-- Закреплённое служебное оповещение будет сообщать о наличии непрочитанных новостей, полученных в фоновом режиме</value>
+• Раздел настроек позволяет управлять уведомлениями и конструировать их.
+• Главный журнал обеспечивает просмотр новостей, переход на веб-страницы, с которых они были получены, и возможность ими поделиться.
+• Закреплённое служебное оповещение будет сообщать о наличии непрочитанных новостей, полученных в фоновом режиме</value>
   </data>
   <data name="KeywordNotSpecified" xml:space="preserve">
     <value>В поле «Начало» не указано ключевое слово для поиска</value>
@@ -296,15 +296,6 @@
   </data>
   <data name="WizardStep5" xml:space="preserve">
     <value>Готово! Осталось указать название оповещения для отображения в журнале</value>
-  </data>
-  <data name="CancelButton" xml:space="preserve">
-    <value>От&amp;мена</value>
-  </data>
-  <data name="NextButton" xml:space="preserve">
-    <value>&amp;Далее</value>
-  </data>
-  <data name="RetryButton" xml:space="preserve">
-    <value>&amp;Повторить</value>
   </data>
   <data name="NotificationsWizard" xml:space="preserve">
     <value>С помощью м&amp;астера</value>
